# cmd/check_memory_usage.go
@@ -10,15 +10,15 @@ func init() {
 	addDeviceFlags(checkMemoryUsage)
 	checkCMD.AddCommand(checkMemoryUsage)
 
-	checkMemoryUsage.Flags().String("warning", "", "warning max threshold for memory usage")
-	checkMemoryUsage.Flags().String("critical", "", "critical max threshold for system voltage")
+	checkMemoryUsage.Flags().String("warning", "", "warning threshold for memory usage")
+	checkMemoryUsage.Flags().String("critical", "", "critical threshold for system voltage")
 }
 
 var checkMemoryUsage = &cobra.Command{
 	Use:   "memory-usage",
-	Short: "Checks whether a UPS device has its main voltage applied",
-	Long: "Checks whether a UPS device has its main voltage applied.\n\n" +
-		"All UPS statistics will be printed as performance data.",
+	Short: "Check the memory usage of a device",
+	Long: "Checks the memory usage of a device.\n\n" +
+		"The usage will be printed as performance data.",
 	Run: func(cmd *cobra.Command, args []string) {
 		r := request.CheckMemoryUsageRequest{
 			CheckDeviceRequest: getCheckDeviceRequest(),
